[BPK-759] Resolve BpkTooltip z-index issue
Adds the ability for the consumer to override the tooltip's portal
className and correctly sets the z-index of the portal.

--- a/packages/bpk-tokens/tokens/base.scss
+++ b/packages/bpk-tokens/tokens/base.scss
@@ -623,6 +623,8 @@ $bpk-zindex-autosuggest: 900;
 /// @group z-indices
 $bpk-zindex-popover: 900;
 /// @group z-indices
+$bpk-zindex-tooltip: 900;
+/// @group z-indices
 $bpk-zindex-modal-scrim: 1000;
 /// @group z-indices
 $bpk-zindex-modal: 1100;
